NLP TP's/texts/robotics/robotics.stackexchange_0000073405.txt
Q:

Errors while installing rgbdslam on NVIDIA Jetson TK1

we are trying to install rbgdsalm on NVIDIA Jetson TK1 by following the given steps in https://github.com/felixendres/rgbdslam_v2
these are the given steps
Prepare Workspace
source /opt/ros/indigo/setup.bash

mkdir -p ~/rgbdslam_catkin_ws/src

cd ~/rgbdslam_catkin_ws/src

catkin_init_workspace

cd ~/rgbdslam_catkin_ws/

catkin_make

source devel/setup.bash

Get RGBDSLAM
cd ~/rgbdslam_catkin_ws/src

wget -q http://github.com/felixendres/rgbdslam_v2/archive/indigo.zip

unzip -q indigo.zip

cd ~/rgbdslam_catkin_ws/

Install
rosdep update

rosdep install rgbdslam

we could successfully complete up to the above step but executing the "catkin_make " gives this error
  [  8%] Building CXX object rgbdslam_v2-indigo/CMakeFiles/rgbdslam.dir/src/moc_openni_listener.cxx.o
c++: internal compiler error: Killed (program cc1plus)
Please submit a full bug report,

with preprocessed source if appropriate.

See <file:///usr/share/doc/gcc-4.8/README.Bugs> for instructions.

make[2]: *** [rgbdslam_v2-indigo/CMakeFiles/rgbdslam.dir/src/moc_openni_listener.cxx.o] Error 4

make[1]: *** [rgbdslam_v2-indigo/CMakeFiles/rgbdslam.dir/all] Error 2

make: *** [all] Error 2

Invoking "make -j1 -l1" failed

I have attempted by enabling a 4GB swap file on the Jetson's storage and again tried with "catkin_make" command. But again en counted with following errors
[ 54%] Building CXX object rgbdslam_v2-indigo/CMakeFiles/rgbdslam.dir/src/node.cpp.o
In file included from /usr/include/GL/freeglut_std.h:128:0,
                 from /usr/include/GL/glut.h:17,
                 from /home/ubuntu/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/glviewer.cpp:24:
/usr/include/GL/gl.h:138:17: error: conflicting declaration 'typedef double GLdouble'
 typedef double  GLdouble; /* double precision float */
                 ^
In file included from /usr/include/qt4/QtOpenGL/QtOpenGL:5:0,
                 from /home/ubuntu/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/glviewer.cpp:22:
/usr/include/qt4/QtOpenGL/qgl.h:85:17: error: 'GLdouble' has a previous declaration as 'typedef GLfloat GLdouble'
 typedef GLfloat GLdouble;
                 ^
In file included from /usr/include/GL/gl.h:2059:0,
                 from /usr/include/GL/freeglut_std.h:128,
                 from /usr/include/GL/glut.h:17,
                 from /home/ubuntu/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/glviewer.cpp:24:
/usr/include/GL/glext.h:468:19: error: conflicting declaration 'typedef ptrdiff_t GLsizeiptr'
 typedef ptrdiff_t GLsizeiptr;
                   ^
In file included from /usr/include/qt4/QtOpenGL/qgl.h:79:0,
                 from /usr/include/qt4/QtOpenGL/QtOpenGL:5,
                 from /home/ubuntu/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/glviewer.cpp:22:
/usr/include/GLES2/gl2.h:69:25: error: 'GLsizeiptr' has a previous declaration as 'typedef khronos_ssize_t GLsizeiptr'
 typedef khronos_ssize_t GLsizeiptr;
                         ^
In file included from /usr/include/GL/gl.h:2059:0,
                 from /usr/include/GL/freeglut_std.h:128,
                 from /usr/include/GL/glut.h:17,
                 from /home/ubuntu/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/glviewer.cpp:24:
/usr/include/GL/glext.h:469:19: error: conflicting declaration 'typedef ptrdiff_t GLintptr'
 typedef ptrdiff_t GLintptr;
                   ^
In file included from /usr/include/qt4/QtOpenGL/qgl.h:79:0,
                 from /usr/include/qt4/QtOpenGL/QtOpenGL:5,
                 from /home/ubuntu/rgbdslam_catkin_ws/src/rgbdslam_v2-indigo/src/glviewer.cpp:22:
/usr/include/GLES2/gl2.h:70:26: error: 'GLintptr' has a previous declaration as 'typedef khronos_intptr_t GLintptr'
 typedef khronos_intptr_t GLintptr;
                          ^
make[2]: *** [rgbdslam_v2-indigo/CMakeFiles/rgbdslam.dir/src/glviewer.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [rgbdslam_v2-indigo/CMakeFiles/rgbdslam.dir/all] Error 2
make: *** [all] Error 2
make: INTERNAL: Exiting with 5 jobserver tokens available; should be 4!
Invoking "make -j4 -l4" failed

Originally posted by Nirmala Madusanka on ROS Answers with karma: 3 on 2016-04-19
Post score: 0

A:

There is a good chance the compiler is running out of memory, especially on a limited embedded platform. Have you enabled any swap? If not, please do so and try again.

Originally posted by gvdhoorn with karma: 86574 on 2016-04-19
This answer was ACCEPTED on the original site
Post score: 2

Original comments
Comment by Felix Endres on 2016-04-20:
Yes, sounds like this issue
Comment by Nirmala Madusanka on 2016-05-06:
Thank you very much and I'll try to do so. But can you tell me how to enable a swap on Jetson's storage. Because the OS is flashing through a host machine using the Jet Pack L4T. In this procedure there is no chance to enable a swap(as I know). Thanks again
Comment by Felix Endres on 2016-05-09:
No idea, sorry.
Comment by Nirmala Madusanka on 2016-05-09:
I have attempted by creating a 4GB swap file inside the Nvidia Jetson TK1 and tried with "catkin_make" command. but now it gave me following errors in consecutive 3 times.
1.
https://drive.google.com/open?id=0B4Z7AAjuMafBQ1F5Uk9hTjdyR00
2.
https://drive.google.com/open?id=0B4Z7AAjuMafBMGY1c0FpUT
Comment by gvdhoorn on 2016-05-09:
In general: for console text, please just copy it into your question. If those screenshots are removed / become inaccessible, we won't ever know what issue you encountered. Please edit your original question with the new information.
Comment by gvdhoorn on 2016-05-09:
As to your problem: the CMakeLists.txt of the package is most likely unconditionally adding the -mfpmath=sse flag to the CXX flags. The compiler you are using does not appear to support that flag, so it prints an error and exits. Remove the flag, or replace with an equivalent.
Comment by Felix Endres on 2016-05-09:
The 4GB solved the memory problem. The compiler errors in the lates log is something different. Please create a new question for it, because it would be confusing to later readers to merge these problems in a single question/answer.
Comment by Nirmala Madusanka on 2016-05-09:
Alright Felix, I will create a new question. thanks a lot

